# ToxoBot

./: .gitignore  CMakeLists.txt  README.md  config.json  index.js  install.sh  main.cpp  main.py  package.json  pipe_in.sh  pipe_out.sh
include/: Message.hpp  MessageParser.hpp
modules/: graceful_killer.py  logger.py  message.py
setup/: python.sh
src/: Message.cpp  MessageParser.cpp
tests/: MessageParserTest.cpp  MessageTest.cpp
